# RustyEngine

./: .env  Cargo.toml  Dockerfile  README.md  cloudbuild.yaml  create-script.sql  drop-script.sql  makefile  supervisord.conf  todo.txt
.sqlx/: query-13311b9312fed4920ec7ec0cc7a541f69a8c6c420e2c88cbc551a503f6cec67f.json  query-14245a0547bef2a45162d0470e73ae0ca39ddf68eec2f424bc0f7644c74c3e9f.json  query-2cbd916d9acbb940ae9bb90df356130f29501db40ad4bd14546912151fbacae1.json  query-5bb2bf29919d819df7b1fe623c98808dae779a60101b56ef00de5bf42fdce4a7.json  query-940079fc5d833a33407e6faba201d0d883d417b34a1feb068f7e50a4106bd51d.json  query-9feb89b2816d0d1d09fee500674ebffb18b42ac44a0207a3ee9fcfaa6752a1b6.json  query-af2b14dd85321bdbb592fecc30d4d6915f1fd64eecec18b9717fc2f9ce5c9ba8.json  query-b188cc5aa86f0b095ef45ac01fdaa86b9dd12be1d76559c7f2ba2b5cc9bf958d.json  query-b560ab6bc3343c48f936fc400556f88c1308dd96883a51e5d5c250d53b008c2f.json  query-db7f591e59141d8f0b89ef3cce9a91ac4ef64b518da34c53056899a1f207d11f.json  query-dcfd86e40af08522629ab8d5d93a99efb921e1c02839c4eaba73e67243d0d130.json  query-fd04b6a00d3ea4696d48de9b4030f328158774d0630a44b557c3fda34ed8ef0a.json
migrations/2023-12-03-013012_adjust2_my_migration/: down.sql  up.sql
src/: api.rs  bonus.rs  database.rs  factory.rs  lib.rs  main.rs  models.rs  schema.rs
tests/: company_tests.rs  customer_tests.rs  data_creation_1_tests.rs  order_detail_tests.rs  order_tests.rs  period_tests.rs  static_db_content_tests.rs  tree_tests.rs
