[package]
name = "commission_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.31", features = ["serde"]}
rand = "0.8.5"
faker_rand = "0.1.1"
serde = {version = "1.0.193", features = ["derive"]}
# tokio (no TLS)
sqlx = { version = "0.7", features = [ "runtime-tokio", "mysql" ] }
tokio = { version = "1.20.0", features = ["rt", "macros"]}
dotenv = "0.15.0"